updated the turns a bit to clarify the player to player movement